// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-entities-list Renders \`service-entities-list\` with custom props 1`] = `
<div>
  <div
    class="layout d-inline-flex align-center"
  >
    <input
      class="v-simple-checkbox ml-4 pa-0"
      type="checkbox"
    />
    <!---->
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <!---->
</div>
`;

exports[`service-entities-list Renders \`service-entities-list\` with default props 1`] = `
<div>
  <!---->
  <!---->
</div>
`;

exports[`service-entities-list Renders \`service-entities-list\` with selected entities 1`] = `
<div>
  <div
    class="layout d-inline-flex align-center"
  >
    <input
      class="v-simple-checkbox ml-4 pa-0"
      type="checkbox"
    />
    <service-entity-actions-stub
      actions="[object Object],[object Object]"
      assignedinstructions=""
      entity="[object Object]"
    />
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      selected="true"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <div
    class="mt-2"
  >
    <service-entity-stub
      entity="[object Object]"
      entitynamefield="custom-entity-name"
      service-id="service-id"
      widgetparameters="[object Object]"
    />
  </div>
  <!---->
</div>
`;
